Fixed mobile nav padding after taken out of container

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,8 @@ nav {
     @media @mobile {
         display: block;
         width: 100%;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .nav-left {
